--- a/InteractiveMapSJSU/app/src/main/res/layout/activity_main.xml
+++ b/InteractiveMapSJSU/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/campusmap"
     tools:context="com.test.interactivemapsjsu.MainActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/my_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+    <!--<ImageView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:id="@+id/campus_map"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:scaleType="centerInside"-->
+        <!--android:src="@drawable/campusmap"-->
+        <!--/>-->
+
+    <Button
+        android:id="@+id/button_king"
+        android:layout_width="55dp"
+        android:layout_height="68dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="145dp"
+        android:text="k"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         />
 
+    <Button
+        android:id="@+id/button_engg"
 
+        android:layout_width="65dp"
+        android:layout_height="85dp"
+        android:text="Eng"
+        android:layout_alignTop="@+id/button_king"
+        android:layout_toRightOf="@+id/button_king"
+        android:layout_toEndOf="@+id/button_king"
+        android:layout_marginLeft="103dp"
+        android:layout_marginStart="108dp" />
+
+    <Button
+        android:id="@+id/button_garage"
+        android:layout_width="89dp"
+        android:layout_height="70dp"
+        android:layout_marginLeft="22dp"
+        android:layout_marginStart="22dp"
+        android:layout_marginBottom="31dp"
+        android:text="Garage"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/button_king"
+        android:layout_toEndOf="@+id/button_king" />
+
+    <Button
+        android:id="@+id/button_bbc"
+        android:layout_width="52dp"
+        android:layout_height="54dp"
+        android:layout_marginRight="31dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginTop="37dp"
+        android:layout_below="@+id/button_engg"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:text="BBC"/>
+    
+    <Button
+        android:id="@+id/button_yuh"
+        android:layout_width="58dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="300dp"
+        android:layout_alignLeft="@+id/button_king"
+        android:layout_alignStart="@+id/button_king"
+        android:text="YUH"/>
+
+    <Button
+        android:id="@+id/button_su"
+        android:layout_width="93dp"
+        android:layout_height="52dp"
+        android:text="SU"
+        android:layout_below="@+id/button_engg"
+        android:layout_alignLeft="@+id/button_engg"
+        android:layout_alignStart="@+id/button_engg" />
 
 
 </RelativeLayout>
