--- a/InteractiveMapSJSU/app/src/main/res/layout/activity_building_detail.xml
+++ b/InteractiveMapSJSU/app/src/main/res/layout/activity_building_detail.xml
@@ -24,23 +24,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Address"
-        android:padding="20dp"
+        android:layout_marginLeft="20dp"
         />
 
     <TextView
         android:id="@+id/detail_travel_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="time"
-        android:padding="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+
         />
 
     <TextView
         android:id="@+id/detail_travel_distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="distance"
-        android:padding="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+
+
         />
 
     <ImageView
@@ -55,8 +58,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/street_view"
-        android:padding="20dp"
         android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+
 
         />
 
