--- a/InteractiveMapSJSU/app/src/main/res/layout/activity_building_detail.xml
+++ b/InteractiveMapSJSU/app/src/main/res/layout/activity_building_detail.xml
@@ -17,6 +17,7 @@
         android:padding="20dp"
         android:layout_marginTop="30dp"
         android:layout_gravity="center"
+        android:textStyle="bold"
         />
 
     <TextView
@@ -25,6 +26,8 @@
         android:layout_height="wrap_content"
         android:text="Address"
         android:layout_marginLeft="20dp"
+        android:textStyle="bold"
+
         />
 
     <TextView
@@ -33,6 +36,10 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
+        android:text="time"
+        android:textStyle="bold"
+
+
 
         />
 
@@ -42,15 +49,21 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
+        android:text="distance"
+        android:textStyle="bold"
+
 
 
         />
 
     <ImageView
         android:id="@+id/detail_building_pic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="330dp"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/library"
+        android:scaleType="fitXY"
+
         />
 
     <Button
@@ -60,8 +73,6 @@
         android:text="@string/street_view"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
-
-
         />
 
 </LinearLayout>
