--- a/InteractiveMapSJSU/app/src/main/res/layout/activity_main.xml
+++ b/InteractiveMapSJSU/app/src/main/res/layout/activity_main.xml
@@ -19,27 +19,30 @@
     <Button
         android:id="@+id/button_king"
         android:layout_width="55dp"
-        android:layout_height="68dp"
+        android:layout_height="65dp"
         android:layout_marginLeft="25dp"
         android:layout_marginStart="25dp"
         android:layout_marginTop="145dp"
-        android:text="k"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:background="@android:color/holo_red_dark"
+        android:alpha="0.35"
+
         />
 
     <Button
         android:id="@+id/button_engg"
-
         android:layout_width="65dp"
-        android:layout_height="85dp"
-        android:text="Eng"
+        android:layout_height="70dp"
         android:layout_alignTop="@+id/button_king"
         android:layout_toRightOf="@+id/button_king"
         android:layout_toEndOf="@+id/button_king"
         android:layout_marginLeft="103dp"
-        android:layout_marginStart="108dp" />
+        android:layout_marginStart="108dp"
+        android:background="@android:color/holo_red_dark"
+        android:alpha="0.33"
+        />
 
     <Button
         android:id="@+id/button_garage"
@@ -48,10 +51,12 @@
         android:layout_marginLeft="22dp"
         android:layout_marginStart="22dp"
         android:layout_marginBottom="31dp"
-        android:text="Garage"
         android:layout_alignParentBottom="true"
         android:layout_toRightOf="@+id/button_king"
-        android:layout_toEndOf="@+id/button_king" />
+        android:layout_toEndOf="@+id/button_king"
+        android:background="@android:color/holo_red_dark"
+        android:alpha="0.33"
+        />
 
     <Button
         android:id="@+id/button_bbc"
@@ -63,25 +68,32 @@
         android:layout_below="@+id/button_engg"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:text="BBC"/>
+        android:background="@android:color/holo_red_dark"
+        android:alpha="0.33"
+        />
     
     <Button
         android:id="@+id/button_yuh"
-        android:layout_width="58dp"
-        android:layout_height="75dp"
+        android:layout_width="55dp"
+        android:layout_height="60dp"
         android:layout_marginTop="300dp"
         android:layout_alignLeft="@+id/button_king"
         android:layout_alignStart="@+id/button_king"
-        android:text="YUH"/>
+        android:background="@android:color/holo_red_dark"
+        android:alpha="0.33"
+        />
 
     <Button
         android:id="@+id/button_su"
         android:layout_width="93dp"
-        android:layout_height="52dp"
-        android:text="SU"
+        android:layout_height="48dp"
+        android:layout_marginTop="10dp"
         android:layout_below="@+id/button_engg"
         android:layout_alignLeft="@+id/button_engg"
-        android:layout_alignStart="@+id/button_engg" />
+        android:layout_alignStart="@+id/button_engg"
+        android:background="@android:color/holo_red_dark"
+        android:alpha="0.33"
+        />
 
 
 </RelativeLayout>
