--- a/InteractiveMapSJSU/app/src/main/res/layout/activity_building_detail.xml
+++ b/InteractiveMapSJSU/app/src/main/res/layout/activity_building_detail.xml
@@ -9,16 +9,28 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <ImageView
+        android:id="@+id/detail_building_pic"
+        android:layout_width="match_parent"
+        android:layout_height="330dp"
+        android:src="@drawable/library"
+        android:scaleType="fitXY"
+
+        />
+
     <TextView
         android:id="@+id/detail_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/building_name"
-        android:padding="20dp"
-        android:layout_marginTop="30dp"
+        android:padding="15dp"
+        android:layout_marginTop="10dp"
         android:layout_gravity="center"
         android:textStyle="bold"
+        android:textSize="25sp"
+        android:textColor="@android:color/holo_blue_dark"
         />
+
 
     <TextView
         android:id="@+id/detail_address"
@@ -26,7 +38,9 @@
         android:layout_height="wrap_content"
         android:text="Address"
         android:layout_marginLeft="20dp"
-        android:textStyle="bold"
+        android:textSize="15sp"
+        android:textColor="#222"
+
 
         />
 
@@ -37,7 +51,10 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:text="time"
-        android:textStyle="bold"
+        android:textSize="15sp"
+        android:textColor="#222"
+
+
 
 
 
@@ -50,21 +67,16 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:text="distance"
-        android:textStyle="bold"
+        android:textSize="15sp"
+        android:textColor="#222"
+
+
 
 
 
         />
 
-    <ImageView
-        android:id="@+id/detail_building_pic"
-        android:layout_width="match_parent"
-        android:layout_height="330dp"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/library"
-        android:scaleType="fitXY"
 
-        />
 
     <Button
         android:id="@+id/detail_button_street_view"
@@ -73,6 +85,7 @@
         android:text="@string/street_view"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
         />
 
 </LinearLayout>
