--- a/InteractiveMapSJSU/app/src/main/res/layout/activity_building_detail.xml
+++ b/InteractiveMapSJSU/app/src/main/res/layout/activity_building_detail.xml
@@ -28,7 +28,8 @@
         android:layout_gravity="center"
         android:textStyle="bold"
         android:textSize="25sp"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="#222"
+
         />
 
 
@@ -38,54 +39,92 @@
         android:layout_height="wrap_content"
         android:text="Address"
         android:layout_marginLeft="20dp"
+        android:layout_marginRight="4dp"
         android:textSize="15sp"
         android:textColor="#222"
-
-
         />
 
-    <TextView
-        android:id="@+id/detail_travel_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:text="time"
-        android:textSize="15sp"
-        android:textColor="#222"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:text="Estimated Time:"
+            android:textSize="15sp"
+            android:textColor="#222"
+
+            />
+
+
+
+        <TextView
+            android:id="@+id/detail_travel_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="20dp"
+            android:text="10 mins"
+            android:textSize="15sp"
+            android:textColor="#222"
+
+            />
+
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:text="Distance:"
+            android:textSize="15sp"
+            android:textColor="#222"
+
+            />
+
+        <TextView
+            android:id="@+id/detail_travel_distance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="20dp"
+            android:text="10 km"
+            android:textSize="15sp"
+            android:textColor="#222"
+
+            />
+
+
+
+    </LinearLayout>
 
 
 
 
-
-        />
-
-    <TextView
-        android:id="@+id/detail_travel_distance"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:text="distance"
-        android:textSize="15sp"
-        android:textColor="#222"
-
-
-
-
-
-        />
 
 
 
     <Button
         android:id="@+id/detail_button_street_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/street_view"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"
+
+
         />
 
 </LinearLayout>
