--- a/InteractiveMapSJSU/app/src/main/res/layout/activity_main.xml
+++ b/InteractiveMapSJSU/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,18 @@
         <!--android:src="@drawable/campusmap"-->
         <!--/>-->
 
+    <AutoCompleteTextView
+        android:hint="Search SJSU Map"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="8"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="100dp"
+        android:background="@android:color/white"
+        android:id="@+id/location_list" />
+
     <Button
         android:id="@+id/button_king"
         android:layout_width="60dp"
