--- a/InteractiveMapSJSU/app/src/main/res/layout/activity_building_detail.xml
+++ b/InteractiveMapSJSU/app/src/main/res/layout/activity_building_detail.xml
@@ -4,129 +4,122 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-<LinearLayout
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <ImageView
-        android:id="@+id/detail_building_pic"
-        android:layout_width="match_parent"
-        android:layout_height="330dp"
-        android:src="@drawable/library"
-        android:scaleType="fitXY"
-
-        />
-
-    <TextView
-        android:id="@+id/detail_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/building_name"
-        android:padding="15dp"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="center"
-        android:textStyle="bold"
-        android:textSize="25sp"
-        android:textColor="#222"
-
-        />
-
-
-    <TextView
-        android:id="@+id/detail_address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Address"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="4dp"
-        android:textSize="15sp"
-        android:textColor="#222"
-        />
-
     <LinearLayout
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <ImageView
+            android:id="@+id/detail_building_pic"
+            android:layout_width="match_parent"
+            android:layout_height="330dp"
+            android:src="@drawable/library"
+            android:scaleType="fitXY"
+
+            />
+
         <TextView
+            android:id="@+id/detail_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/building_name"
+            android:padding="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center"
+            android:textStyle="bold"
+            android:textSize="25sp"
+            android:textColor="#222"
+
+            />
+
+
+        <TextView
+            android:id="@+id/detail_address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Address"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:text="Estimated Time:"
+            android:layout_marginRight="4dp"
             android:textSize="15sp"
             android:textColor="#222"
-
             />
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:text="Estimated Time:"
+                android:textSize="15sp"
+                android:textColor="#222"
+
+                />
 
 
-        <TextView
-            android:id="@+id/detail_travel_time"
-            android:layout_width="wrap_content"
+
+            <TextView
+                android:id="@+id/detail_travel_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="20dp"
+                android:text="10 mins"
+                android:textSize="15sp"
+                android:textColor="#222"
+
+                />
+
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:text="Distance:"
+                android:textSize="15sp"
+                android:textColor="#222"
+
+                />
+
+            <TextView
+                android:id="@+id/detail_travel_distance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="20dp"
+                android:text="10 km"
+                android:textSize="15sp"
+                android:textColor="#222"
+
+                />
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/detail_button_street_view"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
+            android:text="@string/street_view"
+            android:layout_gravity="center"
+            android:textColor="@android:color/white"
             android:layout_marginTop="20dp"
-            android:text="10 mins"
-            android:textSize="15sp"
-            android:textColor="#222"
+            android:background="@color/colorRedDark"
 
             />
-
-
 
     </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:text="Distance:"
-            android:textSize="15sp"
-            android:textColor="#222"
-
-            />
-
-        <TextView
-            android:id="@+id/detail_travel_distance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="20dp"
-            android:text="10 km"
-            android:textSize="15sp"
-            android:textColor="#222"
-
-            />
-
-
-
-    </LinearLayout>
-
-
-
-
-
-
-
-    <Button
-        android:id="@+id/detail_button_street_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/street_view"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-
-
-        />
-
-</LinearLayout>
 
 </ScrollView>
