--- a/InteractiveMapSJSU/app/src/main/res/layout/activity_main.xml
+++ b/InteractiveMapSJSU/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,17 @@
     android:background="@drawable/campusmap"
     tools:context="com.test.interactivemapsjsu.MainActivity">
 
-
     <Button
         android:id="@+id/button_king"
-        android:layout_width="60dp"
+        android:layout_width="70dp"
         android:layout_height="65dp"
         android:layout_marginLeft="25dp"
-        android:layout_marginStart="25dp"
+        android:layout_marginStart="23dp"
         android:layout_marginTop="160dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:background="@drawable/ic_red"
+        android:background="@drawable/red1"
         android:elevation="20dp"
 
         />
@@ -26,64 +25,66 @@
     <Button
         android:id="@+id/button_engg"
         android:layout_width="80dp"
-        android:layout_height="70dp"
+        android:layout_height="72dp"
         android:layout_alignTop="@+id/button_king"
+        android:layout_marginTop="10dp"
         android:layout_toRightOf="@+id/button_king"
         android:layout_toEndOf="@+id/button_king"
         android:layout_marginLeft="110dp"
         android:layout_marginStart="110dp"
-        android:background="@drawable/ic_red"
+        android:background="@drawable/red1"
 
         />
 
     <Button
         android:id="@+id/button_garage"
-        android:layout_width="88dp"
-        android:layout_height="76dp"
+        android:layout_width="73dp"
+        android:layout_height="65dp"
         android:layout_marginLeft="22dp"
         android:layout_marginStart="29dp"
-        android:layout_marginBottom="31dp"
+        android:layout_marginBottom="44dp"
         android:layout_alignParentBottom="true"
         android:layout_toRightOf="@+id/button_king"
         android:layout_toEndOf="@+id/button_king"
-        android:background="@drawable/ic_red"
+        android:background="@drawable/red1"
 
         />
 
     <Button
         android:id="@+id/button_bbc"
-        android:layout_width="58dp"
-        android:layout_height="58dp"
+        android:layout_width="68dp"
+        android:layout_height="62dp"
         android:layout_marginRight="31dp"
         android:layout_marginEnd="31dp"
-        android:layout_marginTop="62dp"
+        android:layout_marginTop="55dp"
         android:layout_below="@+id/button_engg"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:background="@drawable/ic_red"
+        android:background="@drawable/red1"
 
         />
-    
+
     <Button
         android:id="@+id/button_yuh"
-        android:layout_width="65dp"
+        android:layout_width="75dp"
         android:layout_height="65dp"
         android:layout_marginTop="345dp"
         android:layout_alignLeft="@+id/button_king"
         android:layout_alignStart="@+id/button_king"
-        android:background="@drawable/ic_red"
+        android:background="@drawable/red1"
 
         />
 
     <Button
         android:id="@+id/button_su"
-        android:layout_width="85dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="70dp"
+        android:layout_height="62dp"
+        android:layout_marginTop="10dp"
         android:layout_below="@+id/button_engg"
         android:layout_alignLeft="@+id/button_engg"
+        android:layout_marginLeft="20dp"
         android:layout_alignStart="@+id/button_engg"
-        android:background="@drawable/ic_red"
+        android:background="@drawable/red1"
         android:alpha="0.9"
 
         />
