--- a/InteractiveMapSJSU/app/src/main/res/layout/custom_action_bar.xml
+++ b/InteractiveMapSJSU/app/src/main/res/layout/custom_action_bar.xml
@@ -1,19 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <AutoCompleteTextView
-        android:hint="Search SJSU Map"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="8"
-        android:textSize="25sp"
+        android:text="SEARCH: "
+        android:layout_marginLeft="10dp"
         android:textStyle="bold"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="100dp"
-        android:background="@android:color/white"
-        android:id="@+id/location_list" />
+        android:textColor="@android:color/white"
+        android:textSize="15sp"
+        />
+
+    <AutoCompleteTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="16"
+        android:textSize="15sp"
+        android:textColor="@android:color/white"
+        android:id="@+id/location_list"
+
+        />
 
 
 </LinearLayout>
