--- a/InteractiveMapSJSU/app/src/main/res/values/styles.xml
+++ b/InteractiveMapSJSU/app/src/main/res/values/styles.xml
@@ -1,15 +1,19 @@
 <resources>
 
-     <!--Base application theme. -->
+    <!--Base application theme. -->
+    <!--<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
+    <!--&lt;!&ndash; Customize your theme here. &ndash;&gt;-->
+    <!--<item name="colorPrimary">@color/colorPrimary</item>-->
+    <!--<item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
+    <!--<item name="colorAccent">@color/colorAccent</item>-->
+    <!--</style>-->
+
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/colorRedDark</item>
+        <item name="colorPrimaryDark">@color/colorRed</item>
+        <item name="colorAccent">@color/colorPrimaryDark</item>
     </style>
-
-    <!--<style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">-->
-    <!--</style>-->
 
 
 </resources>
