--- a/InteractiveMapSJSU/app/src/main/res/layout/street_view_panorama_view_demo.xml
+++ b/InteractiveMapSJSU/app/src/main/res/layout/street_view_panorama_view_demo.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="BuildNAme"
-        android:textSize="20sp"
-        android:textColor="#222"
-        android:layout_marginTop="5dp"
-        android:layout_gravity="center"/>
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="BuildNAme"-->
+        <!--android:textSize="20sp"-->
+        <!--android:textColor="#222"-->
+        <!--android:layout_marginTop="5dp"-->
+        <!--android:layout_gravity="center"/>-->
 
     <com.google.android.gms.maps.StreetViewPanoramaView
         xmlns:android="http://schemas.android.com/apk/res/android"
