--- a/InteractiveMapSJSU/app/src/main/res/layout/activity_main.xml
+++ b/InteractiveMapSJSU/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,6 @@
         android:layout_toRightOf="@+id/button_king"
         android:layout_toEndOf="@+id/button_king"
         android:background="@drawable/red1"
-
         />
 
     <Button
@@ -61,7 +60,6 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:background="@drawable/red1"
-
         />
 
     <Button
@@ -72,7 +70,6 @@
         android:layout_alignLeft="@+id/button_king"
         android:layout_alignStart="@+id/button_king"
         android:background="@drawable/red1"
-
         />
 
     <Button
@@ -86,14 +83,14 @@
         android:layout_alignStart="@+id/button_engg"
         android:background="@drawable/red1"
         android:alpha="0.9"
-
         />
 
-
-
-
-
-
-
+    <RelativeLayout
+        android:id="@+id/CallMe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true">
+    </RelativeLayout>
 
 </RelativeLayout>
